<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_list_layout_with_fields"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:gravity="center_vertical" >

        <EditText
            android:id="@+id/fragment_list_edittext_for_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/content_name_of_listitem"
            android:maxLines="1" >

            <requestFocus />
        </EditText>

        <ImageView
            android:id="@+id/fragment_list_button_for_voice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/background_for_buttons"
            android:padding="4dp"
            android:src="@drawable/ic_keyboard_voice" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:gravity="center_vertical"
        android:weightSum="2" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="4dp"
            android:layout_weight="1"
            android:gravity="center_vertical" >

            <ImageView
                android:id="@+id/fragment_list_count_minus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/background_for_buttons"
                android:src="@drawable/ic_minus" />

            <EditText
                android:id="@+id/fragment_list_edittext_for_count"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="@string/content_count_of_listitem"
                android:inputType="numberDecimal"
                android:maxLines="1" />

            <ImageView
                android:id="@+id/fragment_list_count_plus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/background_for_buttons"
                android:src="@drawable/ic_plus" />

        </LinearLayout>

        <Spinner
            android:id="@+id/fragment_list_spinner_for_edizm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_weight="1"
            android:gravity="center_vertical|right" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:gravity="center_vertical"
        android:weightSum="2" >

        <EditText
            android:id="@+id/fragment_list_edittext_for_coast"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="4dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/content_coast_of_listitem"
            android:inputType="numberDecimal"
            android:maxLines="1" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_weight="1"
            android:gravity="center_vertical|right" >

            <TextView
                android:id="@+id/fragment_list_textview_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@string/string_category" />

            <Spinner
                android:id="@+id/fragment_list_spinner_for_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:gravity="center_vertical"
        android:weightSum="2" >

        <CheckBox
            android:id="@+id/fragment_list_checkbox_for_important"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="4dp"
            android:layout_weight="1"
            android:text="@string/content_important_of_listitem" />

        <Spinner
            android:id="@+id/fragment_list_spinner_for_shop"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_weight="1" />

    </LinearLayout>

    <EditText
        android:id="@+id/fragment_list_edittext_for_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/content_comment_of_listitem"
        android:maxLines="1" />

</LinearLayout>